--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,6 +43,7 @@ header {
   position: relative;
   display: grid;
   grid-template-columns: 67% 1fr;
+	height: 100vh;
   width: 100%;
 
   @include tablet {
@@ -57,6 +58,7 @@ header {
 
 .main {
   position: relative;
+	padding: 40px;
 }
 
 .items-container {
@@ -64,7 +66,7 @@ header {
   grid-template-columns: 1fr;
   grid-gap: 10px;
   margin: 0 auto;
-  padding: 25px;
+  padding: 25px 0;
   width: 100%;
 
   @include tablet {
